Implements the submission widgets (Exercise 2 and 3)

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -35,9 +35,9 @@
     "--------------------------------------------\n",
     "\n",
     "### Content:\n",
-    "- <font size=\"4\">**[A. Utils installation and data downloading](#A)**</font></br>\n",
+    "- <font size=\"4\">**[A. Installation of utils and download of storage files](#A)**</font></br>\n",
     ">- <font size=\"3\">[A.1. Install SOM utils](#A1)</font></br>\n",
-    ">- <font size=\"3\">[A.2. Download from this Collab's Storage](#A2)</font></br>\n",
+    ">- <font size=\"3\">[A.2. Download csv input file from this Collab's storage](#A2)</font></br>\n",
     "- <font size=\"4\">**[B. Complete the SOM implementation](#B)**</font></br>\n",
     ">- <font size=\"3\">[B.1. SOM description](#B1)</font></br>\n",
     ">- <font size=\"3\">[B.2. SOM function (TO DO) ](#B2)</font></br>\n",
@@ -45,7 +45,8 @@
     "- <font size=\"4\">**[C. SOM simulation](#C)**</font></br>\n",
     ">- <font size=\"3\">[C.1. Perform SOM training (editable) ](#C1)</font></br>\n",
     ">- <font size=\"3\">[C.2. Save SOM training result](#C2)</font></br>\n",
-    "- <font size=\"4\">**[D. Result evaluation](#D)**</font></br>"
+    "- <font size=\"4\">**[D. Result evaluation](#D)**</font></br>\n",
+    "- <font size=\"4\">**[E. Submission and grading ](#E)**</font></br>"
    ]
   },
   {
@@ -108,6 +109,38 @@
     "clear_output()\n",
     "from os import path\n",
     "clients.storage.download_file(path.join(collab_path, filename), './robot_positions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility function used to save files to your Collab storage\n",
+    "\n",
+    "\"\"\"\n",
+    "Save a file to the Collab storage\n",
+    "\n",
+    ":param filepath: relative path to the file\n",
+    ":param filetype: type of the file, e.g., 'text/csv' or 'text/x-python'\n",
+    ":param remove: remove the file of the Jupyter notebook space if True \n",
+    "\"\"\"\n",
+    "def save_to_collab_storage(filename, filetype, remove=False):\n",
+    "    from os import path\n",
+    "    clients = get_hbp_service_client()\n",
+    "    collab_path = get_collab_storage_path()\n",
+    "    filename = path.basename(filepath)\n",
+    "    # if you create new file\n",
+    "    if os.path.isfile(filename):\n",
+    "        # if old version of the file exists\n",
+    "        filepath = os.path.join(collab_name, filename)\n",
+    "        if clients.storage.exists(filepath): \n",
+    "            clients.storage.delete(filepath)\n",
+    "        pydata = clients.storage.upload_file(filename, filepath, filetype)\n",
+    "        # remove \n",
+    "        if remove:\n",
+    "            os.remove(filename)"
    ]
   },
   {
@@ -347,18 +380,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os; filename = 'SOM_solution.py'\n",
-    "clients = get_hbp_service_client()\n",
-    "collab_path = get_collab_storage_path()\n",
-    "# if you create new SOM-function\n",
-    "if os.path.isfile(filename):\n",
-    "    # if old version of SOM function exists\n",
-    "    filepath = os.path.join(collab_path, filename)\n",
-    "    if clients.storage.exists(filepath): \n",
-    "        clients.storage.delete(filepath)\n",
-    "    pydata = clients.storage.upload_file(filename, filepath, 'text/x-python')\n",
-    "    # remove \n",
-    "    os.remove(filename)"
+    "Run the cell below to save your result into your Collab storage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_to_collab_storage(filepath='SOM_solution.py', filetype='text/x-python', remove=True)"
    ]
   },
   {
@@ -408,16 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you create new SOM-function\n",
-    "import os; filename = 'SOM_data_lattice.csv'\n",
-    "clients = get_hbp_service_client()\n",
-    "collab_path = get_collab_storage_path()\n",
-    "if os.path.isfile(filename):\n",
-    "    # Remove an old version of SOM_data_lattice.csv (if it exists)\n",
-    "    filepath = os.path.join(collab_path, filename)\n",
-    "    if clients.storage.exists(filepath): \n",
-    "        clients.storage.delete(filepath)\n",
-    "    pydata = clients.storage.upload_file(filename, filepath, 'text/csv')"
+    "save_to_collab_storage(filepath='SOM_data_lattice.csv', filetype='text/csv', remove=False)"
    ]
   },
   {
@@ -443,11 +465,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Variation: Estimate result of SOM training\n",
+    "# Evaluation of the SOM training\n",
     "from epflx_robox_nrp_utils.SOM.SOM_evaluation import SOM_evaluation\n",
     "somev = SOM_evaluation()\n",
     "var, N = somev.run_evaluation()\n",
     "print \"Your score is \", var, \"with SOM size (\", N, \"x\", N,\").\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## E. Submission and grading\n",
+    "Run the next cell to submit your SOM implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clients = get_hbp_service_client()\n",
+    "collab_path = get_collab_storage_path()\n",
+    "print(\"Retrieving your HBP OIDC token ...\")\n",
+    "token = str(oauth.get_token())\n",
+    "print(\"token retrieved!\")\n",
+    "submission_info = {\n",
+    "    'subheader': 'Exercise 2',\n",
+    "    'filepath': 'SOM_function.py',\n",
+    "    'token': token,\n",
+    "    'collab_path': collab_path,\n",
+    "    'clients_storage': clients.storage\n",
+    "}\n",
+    "from epflx_robox_nrp_utils.submission_manager.submission_widget import display_submission_widget\n",
+    "display_submission_widget(submission_info)"
    ]
   }
  ],
