--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -44,7 +44,8 @@
     "- <font size=\"4\">**[F. Robot navigation within NRP platform (SOM & SARSA application)](#F)**</font></br>\n",
     ">- <font size=\"3\">[F.1. Generate test for NRP platform ](#F1)</font></br>\n",
     ">- <font size=\"3\">[F.2. Save NRP test ](#F2)</font></br>\n",
-    ">- <font size=\"3\">[F.3. Run experiment within NRP platform](#F3)</font></br>"
+    ">- <font size=\"3\">[F.3. Run experiment within NRP platform](#F3)</font></br>\n",
+    "- <font size=\"4\">**[G. Submission and grading ](#G)**</font></br>"
    ]
   },
   {
@@ -90,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clients = get_hbp_service_client()\n",
@@ -175,21 +174,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the next cell to save your result into your Collab storage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you create a new SOM-function\n",
-    "import os; filename = 'SOM_possible_actions.csv'\n",
-    "clients = get_hbp_service_client()\n",
-    "collab_path = get_collab_storage_path()\n",
-    "if os.path.isfile(filename):\n",
-    "    # if old version of SARSA_data_Qvalue.csv exists\n",
-    "    filepath = os.path.join(collab_path, filename)\n",
-    "    if clients.storage.exists(filepath): \n",
-    "        clients.storage.delete(filepath)\n",
-    "    pydata = clients.storage.upload_file(filename, filepath, 'text/csv')"
+    "save_to_collab_storage(filepath='SOM_possible_actions.csv', filetype='text/csv', remove=False)"
    ]
   },
   {
@@ -323,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#%%writefile SARSA_solution.py \n",
@@ -568,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "save_to_collab_storage(filepath='SARSA_solution.py', filetype='text/x-python', remove=True)"
@@ -624,9 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "save_to_collab_storage(filepath='SARSA_data_Qvalue.csv', filetype='text/csv', remove=False)"
@@ -639,7 +630,7 @@
     "-------------------------------\n",
     "\n",
     "-------------------------------\n",
-    "## E. SARSA evaluation <a id='E'></a>"
+    "## E. SARSA Evaluation <a id='E'></a>"
    ]
   },
   {
@@ -710,20 +701,18 @@
    "metadata": {},
    "source": [
     "### F.2. Save NRP test <a id='F2'></a>\n",
-    "We have just generated a path for robot within NRP platform. This path is written into the file __*'SARSA_data_way_points.csv'*__ which is contained in Ipython space now and consists of [x,y] coordinates of points robot will go through. This commads upload the __*'SARSA_data_way_points.csv'*__ into your Collab's storage. \n",
+    "We have just generated a path for the robot navigation within the NRP platform. \n",
+    "This path is written into the file __*'SARSA_data_way_points.csv'*__ which is now contained in this Jupyter notebook space and consists of [x,y] coordinates of the positions the robot will go through. The following command upload the __*'SARSA_data_way_points.csv'*__ into your Collab storage. \n",
     "\n",
-    "Run the cell and then check your storage out to see the __*'SARSA_data_way_points.csv'*__ there."
+    "Run the cell below and check your Collab storage to see if the __*'SARSA_data_way_points.csv'*__ is there."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# if you create new SOM-function\n",
     "save_to_collab_storage(filepath='SARSA_data_way_points.csv', filetype='text/csv', remove=False)"
    ]
   },
@@ -738,15 +727,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we use the results obtained via the implementation of the SOM and SARSA algorithms. We use use these results to navigate a simulated robot within a virtual environment of the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev). To launch such a simulation, please, follow next guide: \n",
+    "Here we use the results obtained with the implementation of the SOM and SARSA algorithms. Thanks to these results, we will navigate a simulated robot within a virtual environment of the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev). To launch such a simulation, please, follow these instructions: \n",
     "\n",
-    "- Download from Collab's storage the data files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__.\n",
+    "- Download from your Collab storage the data files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__.\n",
     "- Open [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev).\n",
     "- Find Exercise_3 in the list of Templates.\n",
     "- Open the tab \"Experiment files\" and find the Exercise_3.\n",
     "- Upload the data files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__ into Experiment files storage.\n",
-    "- Move back to tab \"My experiments\" and launch Exercise_3.\n",
-    "- Run the simulation to see how robot will move navigated by Nevigation created by you."
+    "- Move back to the tab \"My experiments\" and launch Exercise_3.\n",
+    "- Run the simulation and check if the robot navigate through the specfified waypoints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## G. Submission and grading\n",
+    "Run the next cell to submit your SARSA implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clients = get_hbp_service_client()\n",
+    "collab_path = get_collab_storage_path()\n",
+    "print(\"Retrieving your HBP OIDC token ...\")\n",
+    "token = str(oauth.get_token())\n",
+    "print(\"token retrieved!\")\n",
+    "submission_info = {\n",
+    "    'subheader': 'Exercise 3',\n",
+    "    'filepath': 'SARSA_function.py',\n",
+    "    'token': token,\n",
+    "    'collab_path': collab_path,\n",
+    "    'clients_storage': clients.storage\n",
+    "}\n",
+    "from epflx_robox_nrp_utils.submission_manager.submission_widget import display_submission_widget\n",
+    "display_submission_widget(submission_info)"
    ]
   }
  ],
