Use OIDC token to instatiate the Virtual Coach AND a couple of fixes in the Jupyter notebook instructions

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Initialization.\n",
     "\n",
-    "You need to install the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html) and [HBP Service Client](https://collab.humanbrainproject.eu/#/collab/509/nav/24072).\n",
+    "You need to install the [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html) and the [HBP Service Client](https://collab.humanbrainproject.eu/#/collab/509/nav/24072).\n",
     "\n",
     "- **[Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html)** is a Python API that allows you to run and interact with the experiments of the [Neurorobotics platform](http://148.187.97.48/#/esv-private) by scripting them instead of having to use the Web Cockpit.\n",
     "- **[HBP Service Client](https://collab.humanbrainproject.eu/#/collab/509/nav/24072)** is a Python API that provides convenient access to Collaboratory's Storage service.\n",
@@ -111,7 +111,7 @@
     "--------------------------------------------\n",
     "\n",
     "--------------------------------------------\n",
-    "## B. Launch the neurorobotics simulation of an experiment <a id='B'></a>"
+    "## B. Launch a neurorobotics simulation <a id='B'></a>"
    ]
   },
   {
@@ -156,8 +156,10 @@
    "outputs": [],
    "source": [
     "from hbp_nrp_virtual_coach.virtual_coach import VirtualCoach\n",
-    "username = raw_input('Username: ')\n",
-    "vc = VirtualCoach(environment='dev', oidc_username=username)"
+    "print(\"Retrieving your HBP OIDC token\")\n",
+    "token = oauth.get_token()\n",
+    "print(\"token retrieved!\")\n",
+    "vc = VirtualCoach(environment='dev', oidc_token=token)"
    ]
   },
   {
@@ -281,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__C.2.__ Retrieve the latest recorded robot positions in the storage."
+    "__C.2.__ Retrieve the latest recorded robot positions from the NRP storage."
    ]
   },
   {
@@ -295,7 +297,7 @@
     "# Retrieve the latest recorded positions\n",
     "filename = 'robot_positions.csv'\n",
     "csv_content = vc.get_last_run_csv_file(experiment, filename)\n",
-    "# Write positions into file \n",
+    "# Write robot positions into file \n",
     "wr = open(filename, 'w')\n",
     "wr.write(csv_content)\n",
     "\n",
@@ -303,12 +305,13 @@
     "clients = get_hbp_service_client()\n",
     "collab_path = get_collab_storage_path()\n",
     "\n",
-    "# Remove the previous file with recorded positions (if it exists)\n",
+    "# Remove the previous recorded positions, if needed\n",
     "from os import path\n",
     "filepath = path.join(collab_path, filename)\n",
     "if clients.storage.exists(filepath): \n",
     "    clients.storage.delete(filepath)\n",
-    "# Upload a file with the latest recorded robot positions\n",
+    "    \n",
+    "# Upload the latest recorded robot positions to your Collab storage\n",
     "data = clients.storage.upload_file(filename, filepath, 'text/csv')"
    ]
   },
@@ -357,7 +360,7 @@
     "from os import path\n",
     "filename = 'robot_positions.csv'\n",
     "\n",
-    "# Download the latest recorded positions from file\n",
+    "# Download the latest recorded positions from your Collab storage\n",
     "clients = get_hbp_service_client()\n",
     "collab_path = get_collab_storage_path()\n",
     "filepath = path.join(collab_path, filename)\n",
