Code highlight for function names and several fixes

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -213,7 +213,7 @@
     "In order to run the <font color=green>**_SARSA data preparation_**</font> cell, you have to generate a maze and a reward table ('SARSA_data_reward.csv') based on the SOM lattice data.<br>\n",
     "\n",
     "**Output:** Expected reward matrix [Q-values] (*'SARSA_data_Qvalue.csv'*).<br>\n",
-    "When running the <font color=green>**_NRP platform test_**</font> cell, you can generate a random start position (or enter yours) and way points (*'SARSA_data_way_points.csv'*) to reach a goal based on your SARSA learning.<br>\n",
+    "When running the <font color=green>**_NRP platform test_**</font> cell, you can generate a random start position , or enter yours, and a list of way points (*'SARSA_data_way_points.csv'*) to reach a goal based on your SARSA learning.<br>\n",
     "****\n",
     "\n",
     "**SARSA algorithm:**<br>\n",
@@ -237,26 +237,26 @@
     "\n",
     "\n",
     "**Initialization functions:**<br>\n",
-    " - **init_parameters():** genetrate new order of robot positions; <font color=green>**return**</font> *__array__ of new order*.<br>\n",
-    " - **init_trial():** genetrate new order of robot positions; <font color=green>**return**</font> *__array__ of new order*.<br>\n",
+    " - **`init_parameters()`:** generate new order of robot positions; <font color=green>**return**</font> *__array__ of new order*.<br>\n",
+    " - **`init_trial()`:** generate new order of robot positions; <font color=green>**return**</font> *__array__ of new order*.<br>\n",
     " \n",
     "**Update functions:**<br>\n",
-    " - **update_state():** Remember the old position of the agent before moving on. Update the agents position according to the chosen action. Check if the agent has bumped into a wall (move to is_wall).; <font color=green>**return**</font> *__nothing__*.<br>\n",
-    " - **update_E():** Update the eligibility trace according to SARSA; <font color=green>**return**</font> *__nothing__*.<br>\n",
-    " - **update_Q():** Update the Q-values according to SARSA; <font color=green>**return**</font> *__nothing__*.<br>\n",
+    " - **`update_state()`:** Remember the old position of the agent before moving on. Update the agents position according to the chosen action. Check if the agent has bumped into a wall (move to is_wall).; <font color=green>**return**</font> *__nothing__*.<br>\n",
+    " - **`update_E()`:** Update the eligibility trace according to SARSA; <font color=green>**return**</font> *__nothing__*.<br>\n",
+    " - **`update_Q()`:** Update the Q-values according to SARSA; <font color=green>**return**</font> *__nothing__*.<br>\n",
     " \n",
     "**Interaction functions:**<br>\n",
-    " - **choose_action():** Choose the next action based on the current estimate of the Q-values. The parameter epsilon determines how often the agent chooses the action with the highest Q-value (probability `1 - epsilon`). In the rest of the cases, a random action is chosen; <font color=green>**return**</font> *__nothing__*.<br>\n",
-    " - **reward():** Evaluate which reward should be given when performing the chosen action at the current location; <font color=green>**return**</font> *__reward__ value for chosen action*.<br>\n",
+    " - **`choose_action()`:** Choose the next action based on the current estimate of the Q-values. The parameter epsilon determines how often the agent chooses the action with the highest Q-value (probability `1 - epsilon`). In the rest of the cases, a random action is chosen; <font color=green>**return**</font> *__nothing__*.<br>\n",
+    " - **`reward()`:** Evaluate which reward should be given when performing the chosen action at the current location; <font color=green>**return**</font> *__reward__ value for chosen action*.<br>\n",
     "\n",
     "**Checkup functions:**<br>\n",
-    " - **is_trial_end():** checkup if it is the end trial; <font color=green>**return**</font> *boolean value*.<br>\n",
-    " - **is_bump():** checks if the agent bumps into a wall; <font color=green>**return**</font> *boolean value*.<br>\n",
-    " - **is_wall():** checks if the agent sets up on the wall; <font color=green>**return**</font> *boolean value*.<br>\n",
+    " - **`is_trial_end()`:** checkup if it is the end trial; <font color=green>**return**</font> *boolean value*.<br>\n",
+    " - **`is_bump()`:** checks if the agent bumps into a wall; <font color=green>**return**</font> *boolean value*.<br>\n",
+    " - **`is_wall()`:** checks if the agent sets up on the wall; <font color=green>**return**</font> *boolean value*.<br>\n",
     "****\n",
     "\n",
     "\n",
-    "**Global variables initialization (<font color=blue>default</font>, <font color=red>by students</font>):**<br>\n",
+    "**Global variables initialization (<font color=blue>default</font>, <font color=red>yours</font>):**<br>\n",
     " - <font color=blue>**self.video:**</font>visualization trigger (0 - no; 1 - mode1; 2 - mode2; 3 - latency).<br>\n",
     " - <font color=blue>**self.pos:**</font>data from input file ( <font color=red>*'NRP_data_robot_positions.csv'*</font> ).<br>\n",
     " - <font color=blue>**self.lattice:**</font> the initial randomly generated SOM.<br>\n",
@@ -291,8 +291,8 @@
     "\n",
     "<font color=red>**TO DO:**</font><br>\n",
     "**1)** Run the <font color=green>**_SARSA data preparation_**</font> cell. You can see the representations (mode1, mode2) of the maze generated based on your SOM-lattice solution. Please, enter the goal coordinates to get the reward table. Then, press enter to finish this stage.<br>\n",
-    "**2)** Fill the hole (<font color=red>**episode**</font>) in SARSA algorithm **run_trial()**.<br>\n",
-    "**3)** Fill <font color=red>Initialization functions</font> parameters <font color=red>(yours)</font> for the very begining learning **init_parameters()** and needed parameters for the start of each trial **init_trial()**.<br>\n",
+    "**2)** Fill the hole (<font color=red>**episode**</font>) in SARSA algorithm **`run_trial()`**.<br>\n",
+    "**3)** Fill <font color=red>Initialization functions</font> parameters <font color=red>(yours)</font> for the very begining learning **`init_parameters()`** and needed parameters for the start of each trial **`init_trial()`**.<br>\n",
     "**4)** Implement the <font color=red>Update functions</font>: agent position, eligibility trace and expected reward.<br>\n",
     "**5)** Implement the <font color=red>Interaction functions</font>: choose an action (baced on the policy) and get reward for this action.<br>\n",
     "**6)** Implement the <font color=red>Checkup functions</font>: make the agent check itself [is_trial_end(); is_bump(); is_wall()]<br>\n",
@@ -301,9 +301,8 @@
     "****\n",
     "\n",
     "<font color=red>**IMPORTANT:**</font><br>\n",
-    "**1)** The first line of SARSA implementation template: <font color=green>*%%writefile __SARSA_Surname_Name.py__*</font>.<br> Please, replace _'Surname'_ and _'Name'_ with your own Surname and Name. Don't uncomment this line until you are ready to submit.<br>\n",
-    "**2)** Please, keep in mind that the grading process has **a time limit of 60 seconds**.<br>\n",
-    "**3)** Once you are ready to submit, please, uncomment the first line of your script (`%%writefile __SARSA_Surname_Name.py`) and run the cell that contains the script. This way your script will be saved as a file with the given name. **Then, submit this file.**\n",
+    "**1)** Please, keep in mind that the grading process has **a time limit of 60 seconds**.<br>\n",
+    "**2)** Once you are ready to submit, please, uncomment the first line of your script (`%%writefile SARSA_solution.py`) and run the cell that contains the script. This way your script will be saved as a file with the given name. **Then, submit this file.**\n",
     "\n",
     "---------------------------------------\n",
     "\n",
@@ -374,12 +373,12 @@
     "\t\t\tself.latency = self.run_trial()\n",
     "            \n",
     "\t\t\t# Add latency of last trial and visualize latency \n",
-    "\t\t\tif(self.trial%1000==0 or self.trial==self.N_trials): self.sarsaad.save_Qvalue(self.Q)\n",
+    "\t\t\tif (self.trial % 1000 == 0 or self.trial == self.N_trials): self.sarsaad.save_Qvalue(self.Q)\n",
     "\t\t\tself.latency_list.append(self.latency)\n",
-    "\t\t\tif(self.video == 3): self.visualization()\n",
+    "\t\t\tif self.video == 3: self.visualization()\n",
     "                \n",
     "\t\tself.sarsaad.print_Qvalue(self.Q, self.reward_position,self.Actions)\n",
-    "\t\tprint 'Done. Simulation time is ', time.time()-T, '(s).'\n",
+    "\t\tprint 'Done. Simulation time is ', time.time() - T, '(s).'\n",
     "\n",
     "        \n",
     "\t############################################\n",
@@ -388,7 +387,7 @@
     "    \n",
     "\tdef visualization(self):\n",
     "\t\t# visualization of training\n",
-    "\t\tif(0 < self.video < 3): \n",
+    "\t\tif (0 < self.video < 3): \n",
     "\t\t\tsimdata = [self.Nn, self.trial, self.latency]\n",
     "\t\t\tactdata = [self.x_position, self.y_position, self.x_position_old, self.y_position_old]\n",
     "\t\t\tRdata = self.reward_position\n",
@@ -396,8 +395,8 @@
     "\t\t\tQdata = self.Q[self.x_position][self.y_position][:]\n",
     "\t\t\tself.sarsaad.visualization(self.video, simdata, actdata, Rdata, Sdata, Qdata)\n",
     "\t\t# visualization of latency\n",
-    "\t\tif(self.video == 3):\n",
-    "\t\t\tif(self.trial%int(self.N_trials/25)==0 or self.trial==self.N_trials-1):    \n",
+    "\t\tif self.video == 3:\n",
+    "\t\t\tif (self.trial % int(self.N_trials / 25) == 0 or self.trial == self.N_trials - 1):    \n",
     "\t\t\t\tself.sarsaad.latency(self.latency_list,self.N_trials,self.Nn)\n",
     "\t\t\t\ttime.sleep(0.5)\n",
     "        \n",
@@ -417,7 +416,7 @@
     "\t\twhile True:\n",
     "\t\t\tself.run_episode()\n",
     "\t\t\t# visualize learning process\n",
-    "\t\t\tif(0 < self.video < 3): self.visualization()\n",
+    "\t\t\tif (0 < self.video < 3): self.visualization()\n",
     "\t\t\t# check if agent position is a goal\n",
     "\t\t\tif self.is_trial_end(): break\n",
     "\t\treturn self.latency\n",
@@ -425,7 +424,7 @@
     "    \n",
     "    \n",
     "\t################################################\n",
-    "\t\"\"\"        Initialization  fucntions         \"\"\"\n",
+    "\t\"\"\"        Initialization  functions         \"\"\"\n",
     "\t################################################\n",
     "    \n",
     "    \n",
@@ -477,7 +476,7 @@
     "        \n",
     "\t\t# update the agents position according to the action\n",
     "\t\t# move down\n",
-    "\t\tif   self.action == 0: self.x_position += 1\n",
+    "\t\tif self.action == 0: self.x_position += 1\n",
     "\t\t# move up\n",
     "\t\telif self.action == 1: self.x_position -= 1\n",
     "\t\t# move right\n",
@@ -518,7 +517,7 @@
     "\tdef reward(self):\n",
     "\t\t# Look at next positions, is it reward (goal)?\n",
     "\t\t# move down\n",
-    "\t\tif   self.action_old == 0: self.x_pos = self.x_position_old + 1; self.y_pos = self.y_position_old\n",
+    "\t\tif self.action_old == 0: self.x_pos = self.x_position_old + 1; self.y_pos = self.y_position_old\n",
     "\t\t# move up\n",
     "\t\telif self.action_old == 1: self.x_pos = self.x_position_old - 1; self.y_pos = self.y_position_old\n",
     "\t\t# move right\n",
@@ -527,7 +526,7 @@
     "\t\telif self.action_old == 3: self.y_pos = self.y_position_old - 1; self.x_pos = self.x_position_old\n",
     "            \n",
     "\t\t# return an actual reward\n",
-    "\t\tif(self.x_pos==self.reward_position[0])and(self.y_pos==self.reward_position[1]):\n",
+    "\t\tif (self.x_pos == self.reward_position[0]) and (self.y_pos == self.reward_position[1]):\n",
     "\t\t\treturn 1.0\n",
     "\t\telse: return 0.0\n",
     "\n",
@@ -537,12 +536,12 @@
     "\t#########################################\n",
     "        \n",
     "\tdef is_trial_end(self):\n",
-    "\t\treturn (self.reward() == 1.0) or (self.latency >= self.Nn*self.Nn)\n",
+    "\t\treturn (self.reward() == 1.0) or (self.latency >= self.Nn * self.Nn)\n",
     "\n",
     "\n",
     "\tdef is_block(self):\n",
     "\t\t# if action is impossible\n",
-    "\t\tif(len(self.Actions[self.x_position][self.y_position]) == 0.0):\n",
+    "\t\tif len(self.Actions[self.x_position][self.y_position]) == 0.0:\n",
     "\t\t\treturn True\n",
     "\t\telse: return False"
    ]
@@ -555,7 +554,7 @@
     "### C.3. Upload SARSA function into the storage <a id='C3'></a>\n",
     "Once you are done and ready to submit your solution, please, follow the next steps: </br>\n",
     "\n",
-    "- Move to [C.2. SARSA function](#C2) and uncomment the first line `%%writefile SARSA_solution.py` ;\n",
+    "- Move to [C.2. SARSA function](#C2) and uncomment the first line, i.e. remove the `#` symbol before `%%writefile SARSA_solution.py` ;\n",
     "- Run cell [C.2. SARSA function](#C2) then you sholud see `Writing SARSA_solution.py` just above; \n",
     "- Run cell [C.3. Upload SARSA function into the storage](#C3) to save this file in your Collab storage (check your Collab storage to see if the file is there)."
    ]
@@ -577,7 +576,7 @@
     "\n",
     "---------------------------\n",
     "## D. SARSA simulation <a id='D'></a>\n",
-    "In this part you can test your implementation of **C.2. SARSA function (TO DO)** using different modes of visualization. Then, you can save the results of Q-value calculations into a file and upload it to your Collab storage."
+    "In this part, you can test your implementation of **C.2. SARSA function (TO DO)** using different modes of visualization. You can also save the results of Q-value calculations into a file and upload this file to your Collab storage."
    ]
   },
   {
@@ -608,9 +607,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### D.2. Save SOM training result <a id='D2'></a>\n",
-    "The result of the SARSA training is a navigation *heatmap* based on Q-values (represented as table after training simulation). The Q-value data has been saved into the file __*'SARSA_data_Qvalue.csv'*__ which is contained in Ipython space now. This commads upload the __*'SARSA_data_Qvalue.csv'*__ into your Collab's storage. \n",
-    "\n",
+    "### D.2. Save SARSA training result <a id='D2'></a>\n",
+    "The result of the SARSA training is a *navigation heatmap* based on Q-values. This navigation heatmap is represented by a table after the training simulation. The Q-values have been saved into the file __*'SARSA_data_Qvalue.csv'*__ which is now contained in this Jupyter notebook. The next command will upload the __*'SARSA_data_Qvalue.csv'*__ to your Collab storage. \n",
     "Run the cell below and check your Collab storage to see if the __*'SARSA_data_Qvalue.csv'*__ is there."
    ]
   },
@@ -637,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of the SARSA training is to obtain a navigation map based on Q-values. Such a map should provide the shortest way from any point within the robot environment to the defined goal position. The following command collect information about robot movements using this *Q-navigation map*. By running this comand, you will get the statistics of all robot paths to the goal. You can visualize this process and check how the robot performs."
+    "The goal of the SARSA training is to obtain a navigation map based on Q-values. Such a map should provide the shortest path between any position of the robot environment and any goal position. The following command collects information about robot movements using this *Q-navigation map*. By running this comand, you will get the statistics of all robot paths to the goal. You can visualize this process and check how the robot performs."
    ]
   },
   {
@@ -650,7 +648,7 @@
    "source": [
     "from epflx_robox_nrp_utils.SARSA.SARSA_evaluation import SARSA_evaluation\n",
     "sarsaev = SARSA_evaluation()\n",
-    "# Run evaluation with specific mode\n",
+    "# Run evaluation with a specific mode\n",
     "from IPython.display import clear_output\n",
     "try: video = input(\"To visualize the evaluation process, please, input '1': \")\n",
     "except: video = 0;\n",
@@ -727,15 +725,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we use the results obtained with the implementation of the SOM and SARSA algorithms. Thanks to these results, we will navigate a simulated robot within a virtual environment of the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev). To launch such a simulation, please, follow these instructions: \n",
+    "Here we use the results obtained with the SOM and SARSA algorithms. Thanks to these results, we will navigate a simulated robot within a virtual environment of the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev). To launch the relevant simulation, please, follow these instructions below.\n",
     "\n",
-    "- Download from your Collab storage the data files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__.\n",
-    "- Open [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev).\n",
-    "- Find Exercise_3 in the list of Templates.\n",
-    "- Open the tab \"Experiment files\" and find the Exercise_3.\n",
-    "- Upload the data files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__ into Experiment files storage.\n",
-    "- Move back to the tab \"My experiments\" and launch Exercise_3.\n",
-    "- Run the simulation and check if the robot navigate through the specfified waypoints."
+    "- Download the files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__ from your Collab storage.\n",
+    "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private?dev) and select the \"Templates\" tab.\n",
+    "- Select *Exercise_3* in the list of Templates (use the search filter) and press the *Clone* button.\n",
+    "- Select the \"Experiment files\" tab and open the *Exercise_3* folder.\n",
+    "- Upload the files __'SOM_lattice_data.csv'__ and __'SARSA_data_way_points.csv'__ into the Experiment files storage.\n",
+    "- Move back to the \"My experiments\" tab and launch *Exercise_3*.\n",
+    "- Run the simulation and check if the robot navigates through the specfified waypoints."
    ]
   },
   {
