Adds missing header and changes wrong content type

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -23,7 +23,7 @@
     "__Instructions:__\n",
     "- Open __Exercise 1__ in your Collab's space.\n",
     "- Move to the part __*C. \"Record the robot positions\"*__.\n",
-    "- Execute all comands within the Section C using __*Exersice_2_i*__ from the list of NRP experiment for simulation.\n"
+    "- Execute the commands of Section C using __*Exersice_2_i*__ from the list of NRP experiment when launching a simulation.\n"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A.2. Download the csv input file from Collab's Storage <a id='A2'></a>\n",
+    "### A.2. Download the csv input file from Collab storage <a id='A2'></a>\n",
     "Run the cell below to download the input data."
    ]
   },
@@ -103,7 +103,7 @@
     "# Download the default robot_positions.csv file from this Collab's Storage\n",
     "clients = get_hbp_service_client()\n",
     "collab_path = get_collab_storage_path()\n",
-    "filename = raw_input(\"Enter the name of the data file you want to use for simulation:\")\n",
+    "filename = raw_input(\"Enter the name of the data file you want to use for SOM simulation:\")\n",
     "if not filename: \n",
     "    filename = 'robot_positions.csv'\n",
     "clear_output()\n",
@@ -112,12 +112,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utility function to save files into Collab storage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Utility function used to save files to your Collab storage\n",
+    "# Utility function used to save files into your Collab storage\n",
     "\n",
     "\"\"\"\n",
     "Save a file to the Collab storage\n",
@@ -375,10 +382,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Run the cell below to save your result into your Collab storage."
    ]
